# claude-gmail-mcp

./: LICENSE  README.md  auth.py  links.py  pyproject.toml  server.py
backends/: __init__.py  api.py  imap.py
docs/superpowers/plans/: 2026-03-31-attachments.md  2026-04-18-gmail-api-backend.md
docs/superpowers/specs/: 2026-03-31-attachments-design.md  2026-04-18-gmail-api-augment-design.md
tests/: test_api_backend.py  test_backend_detection.py  test_imap_backend.py  test_links.py  test_server.py
