[project]
name = "claude-gmail-mcp"
version = "0.2.0"
description = "Gmail MCP server for Claude CLI — API (OAuth) and SMTP/IMAP backends"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "google-api-python-client",
    "google-auth",
    "google-auth-oauthlib",
]

[project.urls]
Homepage = "https://github.com/pliablepixels/claude-gmail-mcp"
Repository = "https://github.com/pliablepixels/claude-gmail-mcp"
Issues = "https://github.com/pliablepixels/claude-gmail-mcp/issues"

[project.scripts]
claude-gmail-mcp = "server:mcp.run"
claude-gmail-mcp-auth = "auth:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
